--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
      <th>Phone Number</th>
      <th>Bringing</th>
    </tr>
-   <tr></tr>
+   <tr>
+     <td>Daniel</td>
+     <td>123-456-7890</td>
+     <td>Chips</td>
+   </tr>
    <tr></tr>
  </table>
   
