Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
      <td>123-456-7890</td>
      <td>Chips</td>
    </tr>
-   <tr></tr>
+   <tr>
+     <td>Ross</td>
+     <td>098-765-4321</td>
+     <td>Cake</td>
+   </tr>
  </table>
   
 </body>
